# autosar-idsm-toolkit

./: .gitignore  CMakeLists.txt  README.md
apps/idsm_cli/: main.cpp
include/: IdsM.h  IdsM_Internal.h  IdsM_Manager_Wrapper.h  IdsM_Types.h  IdsRm.h  IdsRm_Internal.h  IdsRm_Manager_Wrapper.h  IdsRm_Types.h
src/: IdsM.c  IdsM_Manager.cpp  IdsRm.c  IdsRm_Manager.cpp
tests/: mock_soc_server.py  test_idsm.cpp  test_idsrm.cpp
